--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-fastapi~=0.86.0
-pydantic~=1.10.2
-uvicorn~=0.15.0
-numpy~=1.22.4
-pandas~=1.3.5
-scikit-learn~=1.3.0
+fastapi==0.110.2
+joblib==1.4.0
+numpy==1.24.4
+pandas==2.0.3
+pydantic==2.7.1
+scikit-learn==1.3.2
+typing==3.7.4.3
+uvicorn==0.29.0
+xgboost==2.0.3
